<resources>
    <string name="app_name">Swoosh</string>
    <string name="background_image">Background Image</string>
    <string name="app_logo">app logo</string>
    <string name="desired_league">Desired League</string>
    <string name="mens">Mens</string>
    <string name="co_ed">co-ed</string>
    <string name="womens">Womens</string>
    <string name="next">NEXT</string>
    <string name="find_a_team_in_your_city_and_dominate_the_league">Find a team in your city and dominate the league
    </string>
    <string name="on_going_all_out">ON GOING ALL OUT</string>
    <string name="get_started">GET STARTED</string>
    <string name="finish">FINISH</string>
    <string name="baller">BALLER</string>
    <string name="beginner">Beginner</string>
    <string name="i_am_a">I am a :</string>
    <string name="search_league">Looking for a co-ed beginner league near you ...</string>
</resources>
