<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Controller.MainActivity">
    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/welcomescreenbg"
            android:id="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:scaleType="centerCrop"/>
    <ImageView
            android:layout_width="88dp"
            android:layout_height="29dp" app:srcCompat="@drawable/swooshlogo"
            android:id="@+id/imageView2"
            android:scaleType="fitCenter" android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="@+id/imageView" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:text="GO ALL IN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:textColor="@android:color/background_light" android:fontFamily="@font/montserrat"
            android:textSize="46sp" android:layout_marginTop="80dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
    />
    <TextView
            android:text="@string/on_going_all_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:textColor="@android:color/background_light" android:fontFamily="@font/montserrat"
            android:textSize="22sp"
            app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:text="@string/find_a_team_in_your_city_and_dominate_the_league"
            android:layout_width="211dp"
            android:layout_height="54dp"
            android:id="@+id/textView3"
            android:textColor="@android:color/background_light" android:singleLine="false"
            android:textAlignment="center" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" app:layout_constraintHorizontal_bias="0.46"
            android:fontFamily="@font/montserrat"/>
    <Button
            android:text="@string/get_started"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/getStartedBtn" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/imageView" android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" android:layout_marginBottom="16dp" android:fontFamily="@font/montserrat"
            android:textSize="14sp" android:textColor="@android:color/background_light"
            android:background="@drawable/swoosh_button"/>
</android.support.constraint.ConstraintLayout>